# coupon-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
app/: config.py  db.py  main.py
app/api/: __init__.py  auth.py  company.py  coupon_rule_router.py
app/core/: auth.py
app/models/: company.py  coupon.py  coupon_rule.py  user.py
app/schemas/: company.py  coupon.py  coupon_rule.py  user.py
scripts/: prd.txt
src/coupon_api/: __init__.py
tests/: conftest.py  test_api_company.py  test_api_coupon_rule.py  test_api_coupon_rule_old.py  test_auth.py  test_models_company.py  test_models_coupon.py  test_models_coupon_rule.py  test_models_user.py  test_schemas_company.py  test_schemas_coupon.py  test_schemas_coupon_rule.py  test_schemas_user.py
